# overwatch_queue_notifier

./: .gitignore  .pre-commit-config.yaml  GenericNotifyTest.py  README.md  ROADMAP.md  dataset_generator.py  main.ipynb  main.py  manual_validator.py  manual_validator_video.py  notifiers.py  pyproject.toml  test.py  train.py
.github/workflows/: pytest.yml
model/: __init__.py  model.pth  model.py
scripts/: manual_validator.py  manual_validator_video.py
tests/: test_autodrop_stack.py  test_default.py
utils/: augmentor.py  autodrop_stack.py  dataset_processor.py  notify.py
