[tool.poetry]
name = "overwatch-queue-notifier"
version = "0.1.0"
description = ""
authors = ["thearyadev <personal@aryankothari.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "overwatch_queue_notifier"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
opencv-python = "^4.8.0.76"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
mypy = "^1.5.1"
types-pillow = "^10.0.0.2"
pytest = "^7.4.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
